# RustTest

./: .gitignore  HelloWorld  README  temp.ppm
Rust_threads/: Cargo.toml
Rust_threads/src/: main.rs
alicesoft_tools/: Cargo.toml  temp.txt  translated_eng.txt
alicesoft_tools/config/: config.json  urls.json
alicesoft_tools/src/: main.rs
capture_packet/: Cargo.toml
capture_packet/src/: main.rs
docx_creator/: Cargo.toml
docx_creator/src/: main.rs
docx_creator/src/config/: config.json
guessing_game/: Cargo.toml~
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
pong_game/pong/src/: main.rs  pong.rs
pong_game/pong/src/systems/: bounce.rs  mod.rs  move_ball.rs  paddle.rs
rust_test_intellij/: Cargo.toml
rust_test_intellij/src/: geometry.rs  inv_sqrt.rs  main.rs  obj_model.rs  ppm_decoder.rs  ppm_encoder.rs  renderer.rs  temp.ppm  tga_image.rs  triangle.rs
to_unity/: Cargo.toml
trade_bot/: Cargo.toml
trade_bot/config/: urls.json
trade_bot/src/: main.rs
trade_bot/src/common/: mod.rs  structs.rs  types.rs
trade_bot/src/data_storage/: mod.rs  storage.rs  updater.rs
trade_bot/src/http_connector/: mod.rs  request.rs
vulkano_test/: Cargo.toml
vulkano_test/src/: main.rs
wasm_test/: Cargo.toml  LICENSE_MIT  package-lock.json
wasm_test/src/: lib.rs
