[package]
name = "docx_creator"
version = "0.1.0"
authors = ["u_m14pc <solomennikov@phystech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docx-rs = "0.2.9"
fs_extra = "1.2.0"
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }