[package]
name = "trade_bot"
version = "0.1.0"
authors = ["Semen09 <999solom.s.v.999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#http&https
hyper = "0.13"
hyper-tls = "0.4"
futures = "0.3"
#tcl
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4"
#serialiazation&deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#bytes ops
bytes = "0.5"
