[package]
name = "vulkano_test"
version = "0.1.0"
authors = ["solists <solomennikov@phystech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.0"
vulkano-win = "0.18.0"
image = "0.23.2"
vulkano = "0.18.0"
vulkano-shaders = "0.18.0"
cgmath = "0.17.0"
